docs/0.5.5/_sources/generated/skbio.io.registry.IORegistry.rst.txt

skbio.io.registry.IORegistry
============================




   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   


.. currentmodule:: skbio.io.registry

.. autoclass:: IORegistry

   

   
   .. rubric:: Built-ins

   .. autosummary::
      :toctree:
   
      ~IORegistry.__init_subclass__
   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ~IORegistry.add_format
      
      
      ~IORegistry.create_format
      
      
      ~IORegistry.get_reader
      
      
      ~IORegistry.get_sniffer
      
      
      ~IORegistry.get_writer
      
      
      ~IORegistry.list_read_formats
      
      
      ~IORegistry.list_write_formats
      
      
      ~IORegistry.monkey_patch
      
      
      ~IORegistry.read
      
      
      ~IORegistry.sniff
      
      
      ~IORegistry.write
      
   